# typec

./: .gitignore  Makefile  README.md  cabal.project.local  shell.nix  typec.cabal
app/: Typec.hs  Typei.hs
asm/: dprint.s  fn.s  fn2_add.s  fn2_exit.s  fn2_print_i8.s  fn2_start.s  fn3_fadd.s  fn3_main.s  fn3_printf_f64.s  fn4_main.s  fn4_printf_f64.s  fpoint.s  hello.s  p9.s  printf.s  temp.c  temp.s
src/Typec/: AST.hs  Compiler.hs  Example.hs  Interpreter.hs  Parser.hs
test/: AST.hs  Compiler.hs  Interpreter.hs  Main.hs  Parser.hs
