cabal-version:   3.8
name:            typec
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common common
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.17.*
    , hashable == 1.4.*
    , process == 1.6.*
    , trifecta == 2.1.*
    , unordered-containers == 0.2.*
  default-Language:
    GHC2021

library
  import:
    common
  exposed-modules:
      Typec.AST
    , Typec.Compiler
    , Typec.Example
    , Typec.Interpreter
    , Typec.Parser
  hs-source-dirs:
    src

test-suite typec
  import:
    common
  build-depends:
      typec
    , hspec == 2.10.*
    , QuickCheck == 2.14.*
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
      AST
    , Parser
  type:
    exitcode-stdio-1.0